hphp/test/zend/good/ext-standard-array/bug24220.php
<?php
	var_dump(range("2003", "2004"));
	var_dump(range("a", "z"));
	var_dump(range("1", "10"));
?>