hphp/test/zend/bad/ext/standard/tests/math/rand_error.php
<?php
rand(25);
rand(10,100,false);
rand("one", 100);
rand(1, "hundered");
?>